dim/spec/test_input/invalid_input/modules/valid_test_1.dim
document: valid_test_1

ESR-0010-4139:
  text: req1
